@@ -1,4 +1,5 @@
         - korapxml2conllu:
+            - the sigle-pattern option now affects the entire sigle
             - handle docid attributes correctly if they are in a different line than their parent element <layer>
 
 0.5.0 2022-09-29
